--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 @import url(menu.css);
+@import url(banner.css);
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   font-family: 'Ubuntu', sans-serif;
 }
 
@@ -23,10 +24,6 @@ header{
   z-index: 100;
 }
 
-header .contenedor {
-  display: table;
-}
-
 .contenedor{
   width: 98%;
   margin: auto;
@@ -36,42 +33,11 @@ h1 {
   float: left;
 }
 
+header .contenedor {
+  display: table;
+}
+
 section {
   width: 100%;
   margin-bottom: 25px;
 }
-
-/*.banner{
-  width: 900px;
-  height: 300px;
-  border: 2px solid red;
-  margin: auto;*/
-
-  /*background-image: url(../images/intro.jpg);*/
-  /*background-size: 100% 100%;
-
-  animation: banner 10s infinite;
-  animation-direction: alternate;
-
-}*/
-
-/*@keyframes banner {*/
-  /*0%,30%{
-    background-image: url(../images/phonex.png);
-    opacity: 1;
-  }*/
-  /*31%,34%{
-    opacity: 0.1;
-  }
-  35%,65%{
-    background-image: url(../images/cc.jpg);
-    opacity: 1;
-  }
-  66%,69%{
-    opacity: 0.1;
-  }
-  70%,100%{
-    background-image: url(../images/intro.jpg);
-    opacity: 1;
-  }
-}*/
