--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
 @import url(menu.css);
 @import url(banner.css);
+@import url(blog.css);
 
 * {
   margin: 0;
@@ -40,4 +41,8 @@ header .contenedor {
 section {
   width: 100%;
   margin-bottom: 25px;
+}
+
+#bienvenidos {
+  text-align: center;
 }
