--- a/css/banner.css
+++ b/css/banner.css
@@ -33,3 +33,30 @@
 #banner a:hover {
   background: rgba(51, 51, 51,0.5);
 }
+
+@media (min-width:480px) {
+  #banner h2 {
+    font-size: 40px;
+  }
+  #banner a {
+    margin-top: 25px;
+  }
+}
+
+@media (min-width:768px) {
+  #banner {
+    height: 400px;
+    overflow: hidden;
+  }
+  #banner img {
+    height: auto;
+    margin-top: -100px;
+  }
+}
+
+@media (min-width:1024px) {
+  #banner img {
+    height: auto;
+    margin-top: -200px;
+  }
+}
